<resources>
    <string name="app_name">PicArts</string>
    <string name="image_description">Image</string>
    <string name="_2_grid_item">2 Grid Item</string>
    <string name="search">Search</string>
    <string name="_3_grid_item">3 Grid Item</string>
    <string name="_4_grid_item">4 Grid Item</string>
    <string name="picasso_cache">Picasso Cache</string>
    <string name="custom_cache">Custom Cache</string>
</resources>
